--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: darty_json_safe
 description: A dart data parsing library modeled on swiftyjson
-version: 0.3.0
+version: 1.0.0
 homepage: https://github.com/josercc/darty_json
+public_to: https://pub.dartlang.org
 
 environment:
   sdk: '>=2.16.2 <3.0.0'
